--- a/draft.ipynb
+++ b/draft.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 156,
    "outputs": [],
    "source": [
     "# import packages here\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 157,
    "outputs": [],
    "source": [
     "# Generate data here\n",
@@ -42,7 +42,7 @@
     "\n",
     "# basic setting\n",
     "var_epsilon = 1 # variance for noise in linear regression\n",
-    "d = 5 # d = 5,20,100,200\n",
+    "d = 200 # d = 5,20,100,200\n",
     "n = int(1e4) # sample size\n",
     "eta = 1e0\n",
     "alpha = 0.501 # step size eta_i = eta * i^{-alpha}\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 158,
    "outputs": [],
    "source": [
     "# F for linear regression\n",
@@ -85,25 +85,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iter \t[1000/10000]\t\t finished\n",
-      "Iter \t[2000/10000]\t\t finished\n",
-      "Iter \t[3000/10000]\t\t finished\n",
-      "Iter \t[4000/10000]\t\t finished\n",
-      "Iter \t[5000/10000]\t\t finished\n",
-      "Iter \t[6000/10000]\t\t finished\n",
-      "Iter \t[7000/10000]\t\t finished\n",
-      "Iter \t[8000/10000]\t\t finished\n",
-      "Iter \t[9000/10000]\t\t finished\n",
-      "Iter \t[10000/10000]\t\t finished\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# run sgd\n",
     "#\n",
@@ -150,7 +133,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
